--- a/app/globals.css
+++ b/app/globals.css
@@ -135,16 +135,14 @@
   * {
     @apply border-border outline-ring/50;
   }
+  
   body {
     @apply bg-background text-foreground;
+    font-weight: 300 !important;
   }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply font-serif;
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 400 !important;
   }
 }
+
